--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.4.0",
-    "node-geo-distance": "^1.2.0"
+    "node-geo-distance": "^1.2.0",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
